--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,12 @@
 header {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 1px;
     padding: 10px;
 }
 
 nav {
     display: block;
-    width: 205;
+    width: 20%;
     float: left;
     padding: 5px;
     
